# fakeasm

./: .gitmodules  CMakeLists.txt  array.h  ast.c  ast.h  gen.c  gen.h  lexer.l  llist.c  llist.h  main.c  main.h  parse.c  parse.h  parser.y  predef.c  predef.h  print.c  print.h  semantic.c  strmap.c  strmap.h
tests/: easy.fasm
